feat: Add Electron GUI desktop application
- Implement modern, minimalistic desktop interface with dark theme
- Add comprehensive UI for all CLI features including proxy, headers, and URL patterns
- Create real-time progress tracking with terminal-style console output
- Implement secure IPC architecture with context isolation
- Add native file picker for output directory selection
- Include collapsible advanced settings panel
- Add status indicators (Ready/Cloning/Completed/Failed)
- Implement form validation and user-friendly controls
- Create build scripts and TypeScript configuration for Electron
- Update documentation with GUI usage guide and quick start
- Add copy-electron-assets script for build process

Technical details:
- Main process (main.ts): Window management and IPC handlers
- Preload script (preload.ts): Secure IPC bridge with contextBridge
- Renderer (renderer.ts): UI logic and event handling
- Responsive HTML/CSS with smooth animations
- Color-coded terminal output (info, success, error, warning)
- Follows Electron security best practices

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:electron": "tsc -p tsconfig.electron.json && node copy-electron-assets.mjs",
     "start": "node dist/cli.js",
+    "start:electron": "npm run build:electron && electron dist-electron/electron/main.cjs",
     "dev": "npm run build && node dist/cli.js",
     "dev:watch": "ts-node --esm src/cli.ts",
+    "dev:electron": "NODE_ENV=development npm run build:electron && electron dist-electron/electron/main.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -26,13 +29,14 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
+    "commander": "^11.1.0",
     "https-proxy-agent": "^7.0.2",
-    "mime-types": "^2.1.35",
-    "commander": "^11.1.0"
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
-    "@types/node": "^24.9.2",
     "@types/mime-types": "^2.1.4",
+    "@types/node": "^24.9.2",
+    "electron": "^39.0.0",
     "eslint": "^9.39.0",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
